Add files via upload
- Added a new API endpoint to group all assessment findings in a single endpoint "/api/audits/findings"
- Updated the API documentation (swagger-output.json) to reflect the added endpoint
- Added the HTTPS protocol to the swagger config file (swagger-output.json) 
- Updated the base URL of the swagger config file (swagger-output.json) form "/" to "localhost:8443"
